fix mobile overflow in coming soon problems

--- a/styles/home-styles.css
+++ b/styles/home-styles.css
@@ -511,7 +511,7 @@ body::-webkit-scrollbar-thumb:hover {
     }
 
     #coming-soon-problems {
-        font-size: 5vw;
+        font-size: 4.25vw;
     }
 
     #feedback-button {
